# ai-android-ui-autotest-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-publish.yml  pr-check.yml
config/: config.ci.yaml  config.example.yaml  config.yaml  config.yaml.example
docs/: case_generation_workflow.md  framework_api.md  framework_flow.md  github_setup.md  performance_baseline.md  test_case_entry_standard.md  upgrade_guide.md
docs/adr/: 0001-driver-facade-and-step-capture.md  0002-device-pool-roadmap.md
examples/case_inputs/: test_cases_template.csv
framework/: __init__.py  pytest_fixtures.py  pytest_plugin.py
framework/core/: __init__.py  artifact_manager.py  base_page.py  bounds.py  config.py  defaults.py  driver.py  exceptions.py  locator.py  logger.py  protocols.py  step_capture.py  steps.py  waiter.py  xpath.py
framework/device/: __init__.py  adb.py  manager.py
framework/generator/: __init__.py  models.py  renderer.py
framework/pages/: __init__.py  demo_page.py  via_baidu_page.py
framework/reporting/: __init__.py  allure_helper.py  execution_trace.py  hooks.py  image_tools.py  runtime_store.py  simple_html.py
framework/reporting/assets/: report.css
framework/reporting/templates/: case.html.j2  suite.html.j2
framework/testing/: __init__.py  page_registry.py
framework/vision/: __init__.py  factory.py  image_engine.py
scripts/: check_commit_message.py  check_pr_gate.sh  generate_allure_report.sh  generate_cases_from_excel.py  install_git_hooks.sh  run_via_baidu_adb_report.py  run_via_baidu_adb_report.sh  run_via_baidu_report.sh
tests/: conftest.py  fakes.py  test_adb.py  test_base_page.py  test_case_generator.py  test_config.py  test_demo_smoke.py  test_device_manager.py  test_driver_adapter.py  test_image_engine.py  test_logger.py  test_pytest_plugin.py  test_reporting_hooks.py  test_simple_html.py  test_via_baidu_page.py  test_via_baidu_search.py  test_xpath.py
