[project]
name = "android-ui-framework"
version = "0.1.0"
description = "Android UI automation framework based on pytest, page objects, and uiautomator2."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils>=2.9.3,<2.10.0",
    "allure-pytest>=2.13.5",
    "Jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "opencv-python>=4.9.0.80",
    "Pillow>=10.2.0",
    "PyYAML>=6.0.1",
    "pytest>=8.1.1",
    "pytest-html>=4.1.1",
    "uiautomator2==3.4.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.2.0",
    "pytest-cov>=5.0.0",
    "ruff==0.15.10",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --strict-config --maxfail=1"
markers = [
    "smoke: smoke test cases",
    "device: tests that require a connected Android device",
    "slow: long-running tests",
    "flaky: unstable tests that require extra attention",
    "feature(name): feature-scoped tests",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = [
    "artifacts",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_cases_from_excel.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["framework*"]

[tool.setuptools.package-data]
"framework.reporting" = ["templates/*.j2", "assets/*.css"]
